--- a/src/app/templates/forms/event-form/event-form.component.css
+++ b/src/app/templates/forms/event-form/event-form.component.css
@@ -14,6 +14,10 @@
 .media-object {
   width: 150px;
 }
+.required label:after { 
+  color: #e32;
+  content: ' *';
+}
 
 table.dataTable.dtr-inline.collapsed>tbody>tr[role="row"]>td:first-child:before,
 table.dataTable.dtr-inline.collapsed>tbody>tr[role="row"]>th:first-child:before {
